<resources>
    <string name="app_name">Comfortly</string>
    <string name="add_new_trip">Nova vožnja</string>
    <string name="input_trip_name">Vpišite ime/oznako nove vožnje</string>
    <string name="test_trip">Priprava vožnje</string>
    <string name="calibrating_trip">Kalibracija vožnje</string>
    <string name="recording_trip_data">Snemanje vožnje</string>
    <string name="questionnaire">Vprašalnik: %s</string>
    <string name="panas">PANAS</string>
    <string name="mssq">\"Morska bolezen\"</string>
    <string name="bsss">Občutki</string>
    <string name="demographic">Demografski</string>
    <string name="specific">Vožnja</string>
    <string name="pre_specific_instructions">Kakšne so vaše vozne navade in poznavanje avtonomnih vozil?</string>
    <string name="post_specific_instructions">Z naslednjimi vprašanji ocenite pravkrar opravljeno vožnjo.</string>
    <string name="cancel">Prekliči</string>
    <string name="delete_trip_title">Ali želite izbirati vožnjo %d: %s?</string>
    <string name="delete_trip_message">Izbris vožnje bo izbrisal vse podatke o vožnji.</string>
    <string name="delete">Izbriši</string>
    <string name="stop_recording_trip_title">Ali želite ustaviti snemanje vožnje?</string>
    <string name="stop_recording_trip_message">Vsi podatki vožnje so že shranjeni.</string>
    <string name="setup">Nastavitev</string>
    <string name="error_message_generic">Prišlo je do nepričakovane napaka</string>
    <string name="skip_calibration">Preskoči kalibracijo</string>
    <string name="stop_recording">Ustavi snemanje</string>
    <string name="export_trip_data">Izvozi podatke o vožnji</string>
    <string name="to">DO</string>
    <string name="from">OD</string>
    <string name="unknown_value">\?</string>
    <string name="submit">Oddaj</string>
    <string name="prefill_questions">Izpolni iz prejšnjega vprasalnika</string>
    <string name="start">Začetek</string>
    <string name="end">Konec</string>
    <string name="trip_id">%d: %s</string>
    <string name="insert_answer">Vpišite odgovor</string>
    <string name="from_to_time_minutes">Od: %s\nDo: %s\nTrajanje: %s</string>
    <string name="start_location">Začetna lokacija:</string>
    <string name="end_location">Končna lokacija:</string>
    <string name="start_time">Čas začetka:</string>
    <string name="end_time">Čas konca:</string>
    <string name="average_speed">Povprečna hitrost:</string>
    <string name="maximum_speed">Največja hitrost:</string>
    <string name="average_acceleration">Povprečni pospešek:</string>
    <string name="maximum_acceleration">Največji pospešek:</string>
    <string name="distance">Razdalja:</string>
    <string name="comfort_level">Ocena udobja:</string>
    <string name="emotions">Čustva:</string>
    <string name="accelerometer">Pospeškometer</string>
    <string name="gravity">Gravitacija</string>
    <string name="gyroscope">Giroskop</string>
    <string name="gyroscope_orientation">Giroskop orientacija</string>
    <string name="linear_acceleration">Linearni pospešek</string>
    <string name="rotation_vector">Rotacijski vektor</string>
    <string name="rotation_vector_orientation">Rotacijski vektor orientacija</string>
    <string name="heart_rate">Srčni utrip (bpm)</string>
    <string name="ecg">EKG (mV)</string>
    <string name="x_axis">X-os</string>
    <string name="y_axis">Y-os</string>
    <string name="z_axis">Z-os</string>
    <string name="scalar">Skalar</string>
    <string name="require_permissions_title">Zahtevana dovoljenja</string>
    <string name="require_permissions_message">Aplikacija za delovanje potrebuje dovoljenje za dostop do lokacije in Bluetooth-a.</string>
    <string name="retry">Poskusite ponovno</string>
    <string name="close_app">Zapri aplikacijo</string>
    <string name="back">Nazaj</string>
    <string name="_continue">Naprej</string>
    <string name="turn_on_gps">Vključi GPS</string>
    <string name="turn_on_bluetooth">Vključi Bluetooth</string>
    <string name="hr_devices_instructions">Prosimo namestite merilnik srčnega utripa na prsni koš. Potem pritisnite na gumb
        \"Poišči merlice srčnega utripa\".</string>
    <string name="searching_for_devices">Iskanje naprav…\n\n(Če imate napravo na prsnem košu ampak se ne pojavi na spodnjem senzamu
        pomeni, da je lahko naprava že v uporabi ali pa ne deluje pravilno/ni pravilno nameščena.</string>
    <string name="select_device_to_connect">Izberite merilnik srčnega utripa na katerega se želite povezati:</string>
    <string name="search_hr_devices">Poišči merlice srčnega utripa</string>
    <string name="no_hr_devices_found">Najden ni bil noben merilec srčnega utripa</string>
    <string name="calibrating_sensors">Kalibracija se bo avtomatsko končala čez: %dm %ds</string>
    <string name="recording_trip_time">Trenutni čas vožnje: %dm %ds</string>
    <string name="device_id">ID: %s</string>
    <string name="device_name">Ime: %s</string>
    <string name="device_address">Naslov: %s</string>
    <string name="connected_device">Povezana naprava:\n\nID: %s\nIme: %s\nNaslov: %s</string>
    <string name="demographic_1_question">1. Koliko ste stari?</string>
    <string name="demographic_1_answer_1">17 let ali manj</string>
    <string name="demographic_1_answer_2">18–25 let</string>
    <string name="demographic_1_answer_3">26–35 let</string>
    <string name="demographic_1_answer_4">36–50 let</string>
    <string name="demographic_1_answer_5">51–65 let</string>
    <string name="demographic_1_answer_6">66 let ali več</string>
    <string name="demographic_2_question">2. Katerega spola ste?</string>
    <string name="demographic_2_answer_1">Ženskega</string>
    <string name="demographic_2_answer_2">Moškega</string>
    <string name="demographic_2_answer_3">Drugo</string>
    <string name="demographic_3_question">3. Katera je vaša najvišja pridobljena stopnja izobrazbe?</string>
    <string name="demographic_3_answer_1">Osnovna šola</string>
    <string name="demographic_3_answer_2">Srednja poklicna šola</string>
    <string name="demographic_3_answer_3">Srednja šola</string>
    <string name="demographic_3_answer_4">Diploma</string>
    <string name="demographic_3_answer_5">Magisterij, Doktorat</string>
    <string name="demographic_4_question">4. Trenutni zaposlitveni status?</string>
    <string name="demographic_4_answer_1">Zaplosen</string>
    <string name="demographic_4_answer_2">Samozaposlen</string>
    <string name="demographic_4_answer_3">Nezaposlen</string>
    <string name="demographic_4_answer_4">Upokojenc</string>
    <string name="demographic_4_answer_5">Študent</string>
    <string name="demographic_4_answer_6">Gospodinja</string>
    <string name="demographic_4_answer_7">Drugo</string>
    <string name="specific_1_question">1. Katere vrste prevoza vse uporabljate?</string>
    <string name="specific_1_answer_1">Lastni avto</string>
    <string name="specific_1_answer_2">Avto, ki si ga delite z drugimi</string>
    <string name="specific_1_answer_3">Avtobus</string>
    <string name="specific_1_answer_4">Vlak</string>
    <string name="specific_1_answer_5">Letalo</string>
    <string name="specific_1_answer_6">Kolo</string>
    <string name="specific_1_answer_7">Hoja</string>
    <string name="specific_1_answer_8">Drugo</string>
    <string name="specific_2_question">2. Koliko let že imate vozniški izpit?</string>
    <string name="specific_2_answer_1">1 leto ali manj</string>
    <string name="specific_2_answer_2">1–3 leta</string>
    <string name="specific_2_answer_3">4–8 let</string>
    <string name="specific_2_answer_4">9–15 let</string>
    <string name="specific_2_answer_5">15–25 let</string>
    <string name="specific_2_answer_6">25 let ali več</string>
    <string name="specific_3_question">3. Katere vse lastnosti ima avto, ki ga vozite najpogosteje, če ga vozite?</string>
    <string name="specific_3_answer_1">Tempomat</string>
    <string name="specific_3_answer_2">Aktivni tempomat</string>
    <string name="specific_3_answer_3">Zaznavanje mrtvega kota</string>
    <string name="specific_3_answer_4">Sledenje voznemu pasu</string>
    <string name="specific_3_answer_5">Razpoznavanje prometnih znakov</string>
    <string name="specific_3_answer_6">Samodejna sprememba voznega pasu na večpasovnici</string>
    <string name="specific_3_answer_7">Avtonomna vožnja (pod nadzorom voznika)</string>
    <string name="specific_4_question">4. Koliko kilometriov prevozite povprečno na mesec kot voznik?</string>
    <string name="specific_5_question">5. Koliko kilometriov se prevažate povprečno na mesec kot sopotnik?</string>
    <string name="specific_6_question">6. Ali ste se že kdaj vozili v avtonomnem vozilu?</string>
    <string name="specific_6_answer_1">Da</string>
    <string name="specific_6_answer_2">Ne</string>
    <string name="specific_7_question">7. Ali bi zaupali avtonomnemu vozilu, da vas v celoti pripelje od točke A do B?</string>
    <string name="specific_7_answer_1">Da</string>
    <string name="specific_7_answer_2">Ne</string>
    <string name="specific_7_answer_3">Mogoče</string>
    <string name="mssq_1_question_1">Kako pogosto ste kot otrok (pred 12. letom starosti) imeli slabost ali bruhali pri naslednji aktivnosti: </string>
    <string name="mssq_1_instructions">Ta vprašalnik je namenjen ugotavljanju, kako dovzetni ste za "morsko bolezen" (kinetozo) in katere vrste gibanja jo najbolj povzročajo. Bolezen tu pomeni občutek slabosti, slabosti ali bruhanje.\n\n
Kako pogosto ste kot OTROK (pred 12. letom starosti) imeli občutek slabosti ali ste bruhali pri naslednjih vrstah prevoza ali aktivnosti:</string>
    <string name="mssq_2_instructions">Ta vprašalnik je namenjen ugotavljanju, kako dovzetni ste za "morsko bolezen" (kinetozo) in katere vrste gibanja jo najbolj povzročajo. Bolezen tu pomeni občutek slabosti, slabosti ali bruhanje.\n\n
V ZADNJIH 10 LETIH kako pogosto ste imeli občutek slabosti ali bruhali pri naslednjih vrstah prevoza ali aktivnosti:</string>
    <string name="mssq_1_question">Avtomobil</string>
    <string name="mssq_2_question">Avtobus</string>
    <string name="mssq_3_question">Vlak</string>
    <string name="mssq_4_question">Letalo</string>
    <string name="mssq_5_question">Čoln</string>
    <string name="mssq_6_question">Ladja, Trajekt</string>
    <string name="mssq_7_question">Guganje na gugalnici</string>
    <string name="mssq_8_question">Vlakci smrti</string>
    <string name="mssq_1_answer">Ni relevantno</string>
    <string name="mssq_2_answer">Nikoli občutil slabost</string>
    <string name="mssq_3_answer">Redko občutil slabost</string>
    <string name="mssq_4_answer">Včasih občutil slabost</string>
    <string name="mssq_5_answer">Pogosto občutil slabost</string>
    <string name="bsss_instructions">Za vsako trditev označite, koliko se z njo strinjate.</string>
    <string name="bsss_1_question">Rad/a bi raziskoval/a nenavadne kraje</string>
    <string name="bsss_2_question">Postanem nemiren/na, če preveč časa preživim doma</string>
    <string name="bsss_3_question">Rad/a počnem shrljive stvari (stvari ki vzbujajo strah)</string>
    <string name="bsss_4_question">Rad/a imam nore in divje zabave</string>
    <string name="bsss_5_question">Rad/a bi se odpravil/a na potovanje brez vnaprej načrtovane poti.</string>
    <string name="bsss_6_question">Rad/a imam prijatelje, ki so vzemerljivo nepredvidljivi.</string>
    <string name="bsss_7_question">Rad/a bi šel/šla na skok z elastiko (bungee jumping).</string>
    <string name="bsss_8_question">Rad/a bi doživel/a nove in vznemirljive izkušnje, tudi če so nezakonite.</string>
    <string name="bsss_1_answer">Sploh se ne strinjam</string>
    <string name="bsss_2_answer">Ne strinjam se</string>
    <string name="bsss_3_answer">Niti se ne strinjam, niti se strinjam</string>
    <string name="panas_instructions">Za vsako besedo označite, kako se počutite sedaj (v tem trenutku).</string>
</resources>