<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.trip.questionnaire.QuestionnaireActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/Comfortly.Toolbar.Title"
        tools:title="@string/setup"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gps_button"
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:enabled="true"
        android:text="@string/turn_on_gps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bluetooth_button"
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:enabled="true"
        android:text="@string/turn_on_bluetooth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_button"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hr_devices_instructions"
        style="@style/Comfortly.BodyLarge.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:enabled="true"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/hr_devices_instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_button"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_devices_button"
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:enabled="true"
        android:visibility="gone"
        android:text="@string/search_hr_devices"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr_devices_instructions"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/list_title"
        style="@style/Comfortly.BodyLarge.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:visibility="gone"
        android:textStyle="bold"
        android:text="@string/select_device_to_connect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_devices_button"
        tools:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hr_devices_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_16"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/connected_device"
        app:layout_constraintTop_toBottomOf="@+id/list_title"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/connected_device"
        style="@style/Comfortly.BodyLarge.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:visibility="gone"
        android:textStyle="bold"
        android:padding="@dimen/spacing_16"
        android:background="@drawable/border_primary_rounded"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr_devices_list"
        tools:text="Connected device:"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        style="@style/Widget.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16"
        android:enabled="false"
        android:text="@string/_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>